<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeople"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textViewPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBill" />

    <TextView
        android:id="@+id/textViewBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/editTextBill"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBill"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPeople"
        android:layout_width="108dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPeople"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/radioGroupW"
        android:layout_height="@dimen/radioGroupH"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337">

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="@dimen/radioButtonW"
            android:layout_height="@dimen/radioButtonH"
            android:text="@string/_20_tip"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="@dimen/radioButtonW"
            android:layout_height="@dimen/radioButtonH"
            android:text="@string/_15_tip"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="@dimen/radioButtonW"
            android:layout_height="@dimen/radioButtonH"
            android:text="@string/_10_tip"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButtonCustom"
            android:layout_width="@dimen/radioButtonW"
            android:layout_height="@dimen/radioButtonH"
            android:text="@string/custom_tip"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTip"
        android:layout_width="@dimen/customTipW"
        android:layout_height="@dimen/customTipH"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeople"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>